--- a/pruebachat.html
+++ b/pruebachat.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>BOT</title>
+<title>Chat</title>
 </head>
 <body>
 
-<h1>Soporte al Agente</h1>
+<h1>Banco Iron Man</h1>
 
 
 <script
