--- a/pruebachat.html
+++ b/pruebachat.html
@@ -35,8 +35,8 @@
   type="text/javascript"
   src="https://apps.mypurecloud.com/webchat/jsapi-v1.js"
   region="us-east-1"
-  org-guid="469e5298-2ec4-4340-bdea-08ad8c2495b5"
-  deployment-key="7fe9bd9e-3b6b-47f7-919a-2bac796ed23c"
+  org-guid="c8bb9493-2b8c-415a-b7b1-44cef16960f8"
+  deployment-key="c267637f-993c-4ae4-b7bf-c417faf9e23e"
 ></script>
     
     <script type="text/javascript">
@@ -87,18 +87,25 @@ let chatConfig = {
     "width": "100%",
     "height": "100%"
   }
-};
+  },
+    // Deployment key for your cobrowse deployment from Genesys Cloud admin UI
+        "cobrowseConfig": {
+                    "deploymentKey": "s9av9rsFnz8YmsI6Da6kllyaA73CKW2o",
+               }
+}; 
 
-ININ.webchat.create(chatConfig, function(err, webchat) {
-    if (err) {
-        console.error(err);
-        throw err;
-    }
+    ININ.cobrowse.create(chatConfig, function(err, webchat) {
+        if (err) {
+            //console.log(err);
+            throw err;
+        }
+
 
     webchat.renderPopup({
         width: 400,
         height: 400,
-        title: 'Chat'
+        title: 'Chat',
+        newTab: true
     });
 });
        } )     
